project/logs/20250507_163444.log
Use Adapter:NVIDIA GeForce RTX 3060 Laptop GPU

FeatureLevel : 12.2

Complete create D3D12Device!!!

Begin CompileShader, path:Object3D.VS.hlsl

Compile Succeeded, path:Object3D.VS.hlsl, profile:vs_6_0

Begin CompileShader, path:Object3D.PS.hlsl

Object3D.PS.hlsl:6:1: error: Semantic SV_TARGET is invalid for shader model: vs
PixelShaderOutput main()
^

